--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 100vh;
         }
 
         header {
@@ -20,6 +24,10 @@
         }
 
         main {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
@@ -30,6 +38,7 @@
             padding: 20px;
             border-radius: 5px;
             background-color: #f9f9f9;
+            width: 100%;
         }
 
         label {
