--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
         main {
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            padding: 10px;
+            margin: 10px;
+        
         }
 
         form {
@@ -36,7 +38,7 @@
             padding: 20px;
             border-radius: 5px;
             background-color: #f9f9f9;
-            width: 100%;
+            width: 50%;
         }
 
         label {
@@ -66,7 +68,7 @@
 
 .previsualizacion {
             margin-top: 30px;
-            width: 100%;
+            width: 50%;
             overflow: hidden;
             position: relative;
         }
