--- a/index.html
+++ b/index.html
@@ -143,30 +143,65 @@
         </form>
          <div class="previsualizacion">
             <div class="ejemplos-container">
-                <div class="ejemplo">
-                    <h3>Ejemplo 1</h3>
-                    <p>Descripción del ejemplo 1</p>
+                 <div class="ejemplo">
+                    <h3>H1 Sushiwakka Express</h3>
+                    <p>Franquicia de Sushis</p>
+                    <img src="sushi.png" alt="Sushiwakka Express">
+                    <table>
+                        <tr>
+                            <td>CPC</td>
+                            <td>CPM</td>
+                            <td>CPA</td>
+                            <td>CPL</td>
+                        </tr>
+                        <tr>
+                            <td>0,20</td>
+                            <td>5</td>
+                            <td>7,5</td>
+                            <td>-</td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="ejemplo">
-                    <h3>Ejemplo 2</h3>
+                    <h3>H2 Ejemplo 2</h3>
                     <p>Descripción del ejemplo 2</p>
+                    <img src="imagen2.png" alt="Ejemplo 2">
+                    <table>
+                        <tr>
+                            <td>CPC</td>
+                            <td>CPM</td>
+                            <td>CPA</td>
+                            <td>CPL</td>
+                        </tr>
+                        <tr>
+                            <td>0,30</td>
+                            <td>6</td>
+                            <td>8</td>
+                            <td>-</td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="ejemplo">
-                    <h3>Ejemplo 3</h3>
+                    <h3>H3 Ejemplo 3</h3>
                     <p>Descripción del ejemplo 3</p>
+                    <img src="imagen3.png" alt="Ejemplo 3">
+                    <table>
+                        <tr>
+                            <td>CPC</td>
+                            <td>CPM</td>
+                            <td>CPA</td>
+                            <td>CPL</td>
+                        </tr>
+                        <tr>
+                            <td>0,25</td>
+                            <td>7</td>
+                            <td>6</td>
+                            <td>10</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="ejemplo">
-                    <h3>Ejemplo 4</h3>
-                    <p>Descripción del ejemplo 4</p>
-                </div>
-                <div class="ejemplo">
-                    <h3>Ejemplo 5</h3>
-                    <p>Descripción del ejemplo 5</p>
-                </div>
-                <div class="ejemplo">
-                    <h3>Ejemplo 6</h3>
-                    <p>Descripción del ejemplo 6</p>
-                </div>
+            </div>
+        </div>
             </div>
         </div>
     </main>
