--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
             padding: 10px 0;
         }
 
+.introduccion {
+            background-color: #f0f0f0;
+            padding: 10px;
+            text-align: center;
+        }
+
+        /* Estilos para el párrafo de introducción */
+        .introduccion p {
+            color: #888;
+            font-size: 12px;
+            margin: 0;
+        }
+
+
         main {
             display: flex;
             align-items: center;
@@ -131,7 +145,10 @@
     <header>
         <h1>I-Appoint Consulting</h1>
     </header>
-    
+    <div class="introduccion">
+        <h1>Generador de Presupuestos de Marketing</h1>
+        <p>Sólo ofrecemos una determinada serie de servicios en los que nos hemos especializado</p>
+    </div>
     <main>
          <form id="presupuestadorForm">
             <label for="nicho">Nicho:</label>
