--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
          <div class="previsualizacion">
             <div class="ejemplos-container">
                  <div class="ejemplo">
-                    <h3>H1 Sushiwakka Express</h3>
+                    <h3>Sushiwakka Express</h3>
                     <p>Franquicia de Sushis</p>
                     <img src="sushi.png" alt="Sushiwakka Express">
                     <table>
@@ -200,9 +200,9 @@
                     </table>
                 </div>
                 <div class="ejemplo">
-                    <h3>H2 Ejemplo 2</h3>
-                    <p>Descripción del ejemplo 2</p>
-                    <img src="imagen2.png" alt="Ejemplo 2">
+                    <h3>El Gaucho</h3>
+                    <p>Empresa de Restauración en Madrid Centro</p>
+                    <img src="parrilla.png" alt="Ejemplo 2">
                     <table>
                         <tr>
                             <td>CPC</td>
