--- a/index.html
+++ b/index.html
@@ -151,8 +151,22 @@
     </div>
     <main>
          <form id="presupuestadorForm">
-            <label for="nicho">Nicho:</label>
-            <input type="text" id="nicho" name="nicho" required>
+           <label for="nicho">Nicho:</label>
+            <select id="nicho" name="nicho" required>
+                <option value="">Seleccionar</option>
+                <option value="Belleza B2B">Belleza B2B</option>
+                <option value="Belleza B2C">Belleza B2C</option>
+                <option value="Energía B2B">Energía B2B</option>
+                <option value="Energía B2C">Energía B2C</option>
+                <option value="Servicios Informáticos B2B">Servicios Informáticos B2B</option>
+                <option value="Infoproducto">Infoproducto</option>
+                <option value="Tours">Tours</option>
+                <option value="Clínicas Dentales">Clínicas Dentales</option>
+                <option value="Agencia de Viajes">Agencia de Viajes</option>
+                <option value="Reparación e Instalación">Reparación e Instalación</option>
+                <option value="Mudanzas">Mudanzas</option>
+                <option value="Inmobiliaria">Inmobiliaria</option>
+            </select>
             
             <label for="tipoEmpresa">Tipo de Empresa:</label>
             <select id="tipoEmpresa" name="tipoEmpresa" required>
