--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 <option value="Botón de Chat con IA Standar + 1 Proceso automático">Botón de Chat con IA Standar + 1 Proceso automático</option>
                 <option value="Pack i-Sales (2 Meses)">Pack i-Sales (2 Meses)</option>
                 <option value="Pack i-Sales Pro (2 Meses)">Pack i-Sales Pro (2 Meses)</option>
+                <option value="Publicidad Meta Ads / Google Ads">Publicidad Meta Ads / Google Ads</option>
             </select>
             
             <label for="plazo">Plazo del Servicio:</label>
