--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <option value="Reparación e Instalación">Reparación e Instalación</option>
                 <option value="Mudanzas">Mudanzas</option>
                 <option value="Inmobiliaria">Inmobiliaria</option>
+                <option value="Agencia">Agencia</option>
             </select>
             
             <label for="tipoEmpresa">Tipo de Empresa:</label>
@@ -196,8 +197,27 @@
          <div class="previsualizacion">
             <div class="ejemplos-container">
                  <div class="ejemplo">
+                    <h3>Preso Vital </h3>
+                    <p>Fabricante Neuroestimulación Facial (Venta B2B)</p>
+                    <img src="onfacecpa.png" alt="Sushiwakka Express">
+                    <table>
+                        <tr>
+                            <td>CPC</td>
+                            <td>CPM</td>
+                            <td>CPA</td>
+                            <td>CPL</td>
+                        </tr>
+                        <tr>
+                            <td>0,29€</td>
+                            <td>10</td>
+                            <td></td>
+                            <td>2,89€</td>
+                        </tr>
+                    </table>
+                </div>
+                 <div class="ejemplo">
                     <h3>Sushiwakka Express</h3>
-                    <p>Franquicia de Sushis</p>
+                    <p>Franquicia de Sushis (Venta Online)</p>
                     <img src="sushi.png" alt="Sushiwakka Express">
                     <table>
                         <tr>
@@ -207,9 +227,9 @@
                             <td>CPL</td>
                         </tr>
                         <tr>
-                            <td>0,20</td>
+                            <td>0,20€</td>
                             <td>5</td>
-                            <td>7,5</td>
+                            <td>7,5€</td>
                             <td>-</td>
                         </tr>
                     </table>
@@ -226,16 +246,16 @@
                             <td>CPL</td>
                         </tr>
                         <tr>
-                            <td>0,30</td>
-                            <td>6</td>
-                            <td>8</td>
+                            <td>0,10€</td>
+                            <td>5</td>
+                            <td>-</td>
                             <td>-</td>
                         </tr>
                     </table>
                 </div>
                 <div class="ejemplo">
-                    <h3>H3 Ejemplo 3</h3>
-                    <p>Descripción del ejemplo 3</p>
+                    <h3>Ahorro Direct</h3>
+                    <p>Comercializadora Luz y Gas (B2B)</p>
                     <img src="imagen3.png" alt="Ejemplo 3">
                     <table>
                         <tr>
@@ -245,10 +265,10 @@
                             <td>CPL</td>
                         </tr>
                         <tr>
-                            <td>0,25</td>
-                            <td>7</td>
-                            <td>6</td>
-                            <td>10</td>
+                            <td>1,25€</td>
+                            <td>20</td>
+                            <td>-</td>
+                            <td>10€</td>
                         </tr>
                     </table>
                 </div>
