--- a/index.html
+++ b/index.html
@@ -133,6 +133,25 @@
     }
 }
 
+        .detalles {
+            background-color: #f0f0f0;
+            padding: 20px;
+            text-align: center;
+        }
+
+        /* Estilos para los títulos en la sección detalles */
+        .detalles h1,
+        .detalles h2 {
+            color: #333;
+            margin-top: 0;
+        }
+
+        /* Estilos para los párrafos en la sección detalles */
+        .detalles p {
+            color: #666;
+            font-size: 14px;
+        }
+
         footer {
             text-align: center;
             padding: 10px;
@@ -273,7 +292,8 @@
             </div>
         </div>
     </main>
-     <div>
+     <section class="detalles">
+            <div>
             <h1>¿Cómo funciona nuestro servicio?</h1>
             <p id="explicacion"></p>
         </div>
@@ -281,7 +301,7 @@
         <div>
             <h2>Forma de Trabajo</h2>
             <p id="trabajo"></p>
-        </div>
+        </div></section>
     <footer>
         <p>Derechos de Autor &copy; 2023 IAPPOINT. Todos los derechos reservados.</p>
     </footer>
