--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             margin: 0 10px;
         }
 
+        table{
+                margin: auto;
+        }
+
         /* Estilos para la imagen en los ejemplos */
         .ejemplo img {
             width: 150px;
