--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                     </table>
                 </div>
                 <div class="ejemplo">
-                    <h3>Clínica Dental Yolanda Flores </h3>
-                    <p>Clínica Dental en Sevilla</p>
-                    <img src="https://cdn.palbincdn.com/users/27485/upload/images/_mg_9293-6@x768.JPG" alt="Sushiwakka Express">
+                    <h3>Distrito Beauty </h3>
+                    <p>Centro Estético || MicroPigmentación Masculina</p>
+                    <img src="https://cdn.palbincdn.com/users/27485/upload/images/_mg_9293-6@x768.JPG" alt="Distrito Beauty">
                     <table>
                         <tr>
                             <td>CPC</td>
@@ -265,10 +265,10 @@
                             <td>CPL</td>
                         </tr>
                         <tr>
-                            <td>0,29€</td>
-                            <td>10</td>
-                            <td></td>
-                            <td>2,89€</td>
+                            <td>0,19€</td>
+                            <td>3,22€</td>
+                            <td>-</td>
+                            <td>2,10€</td>
                         </tr>
                     </table>
                 </div>
