--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
          nicho.addEventListener("change", () => {
             if (nicho.value === "Belleza B2B") {
-                trabajo.textContent = "Forma de trabajo para Belleza B2B";
+                trabajo.textContent = "El sector de la belleza es un sector muy competitivo. Si vendes productos a Centros Estéticos estás de suerte porque es un sector que en B2B no está bien explota y puedes conseguir Costes por Cliente Potencial de 2€ , Como nuestro Cliente Preso Vital que consiguió 300 Leads por un coste total de 600€, para vender un producto de neuro estimulación facial de ticket de 5000€. ";
             } else if (nicho.value === "Belleza B2C") {
                 trabajo.textContent = "Forma de trabajo para Belleza B2C";
             } else if (nicho.value === "Energía B2B") {
