--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             justify-content: center;
             padding: 10px;
             margin: 10px;
-        
+            flex-wrap: wrap;
         }
 
         form {
@@ -153,6 +153,21 @@
         .detalles p {
             color: #666;
             font-size: 14px;
+        }
+
+        @media (max-width: 500px) {
+            main {
+                margin: 0;
+            }
+
+            form {
+                width: 100%;
+            }
+
+            .previsualizacion {
+                width: 100%;
+                margin-top: 20px;
+            }
         }
 
         footer {
