--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
     border-radius: 4px;
 }
 
+        .modal-content input[type="tel"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 /* Estilos para los select dentro de .modal-content */
 .modal-content select {
     width: 100%;
