--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             padding: 10px 20px;
             border-radius: 4px;
             cursor: pointer;
+            
         }
 
         .modal {
@@ -111,7 +112,7 @@
 
 /* Estilos para los input[type="text"] dentro de .modal-content */
 .modal-content input[type="text"] {
-    width: 100%;
+    width: 90%;;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -119,21 +120,14 @@
 }
 
         .modal-content input[type="tel"] {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-/* Estilos para los select dentro de .modal-content */
-.modal-content select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+
 
 /* Estilos para el botón de enviar dentro de .modal-content */
 .modal-content button[type="submit"] {
@@ -143,6 +137,7 @@
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    width: 90%;
 }
 
 /* Estilos para el botón de cerrar el modal */
