--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <input type="text" id="nombre" name="nombre" required>
                 <label for="telefono">Teléfono:</label>
                 <input type="tel" id="telefono" name="telefono" required>
-                <button type="submit" id="closeModa2">Enviar</button>
+                <button type="submit" id="closeModal2">Enviar</button>
             </div>
         </div>
          <div class="previsualizacion">
@@ -562,7 +562,7 @@
 
 // Agregamos un manejador de eventos para el botón de cierre del modal
 const closeModalButton = document.getElementById("closeModa2");
-closeModa1Button.addEventListener("click", closeModa2);
+closeModalButton.addEventListener("click", closeModal);
 
         // Agregamos un manejador de eventos para el formulario
         document.getElementById("presupuestadorForm").addEventListener("submit", function(event) {
