--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <input type="text" id="nombre" name="nombre" required>
                 <label for="telefono">Teléfono:</label>
                 <input type="tel" id="telefono" name="telefono" required>
-                <button type="button" id="closeModalButton">Enviar</button>
+                <button type="submit" id="closeModalButton">Enviar</button>
             </div>
         </div>
          <div class="previsualizacion">
